--- a/Flexbox6.html
+++ b/Flexbox6.html
@@ -108,6 +108,7 @@
     .maincont2 {
       display: flex;
       flex-wrap: wrap;
+      overflow: hidden;
       flex-grow: 1;
       justify-content: center;
       height: 460px;
