--- a/Flexbox2.html
+++ b/Flexbox2.html
@@ -108,6 +108,7 @@
     .maincont1 {
       display: flex;
       flex-wrap: wrap;
+      overflow: hidden;
       flex-grow: 1;
       align-items: center;
       justify-content: center;
